@@ -1,8 +1,11 @@
 UCDetector 0.11.0 from ?:
 New features:
  - Checkbox "Ignore bean methods"
+ - When UCDetector is running, now it is possible to continue editing
+ 
 Bugfixes:
  - Filters are now "ignore case"
+ - Don't change visibility of enums constants
 
 // -----------------------------------------------------------------------------
 UCDetector 0.10.0 from 2008-09-04:
